Fixed gapi and added ability to modify job's category

--- a/Code/oncareer/src/components/Application/Window/Dashboard/Job/styles.css
+++ b/Code/oncareer/src/components/Application/Window/Dashboard/Job/styles.css
@@ -131,7 +131,7 @@
 }
 
 .job_detail_input_wrapper {
-  padding: 10px 20px;
+  padding: 7.5px 20px;
 }
 
 .job_detail_input_wrapper label {
@@ -142,6 +142,7 @@
   line-height: 36px;
 }
 
+/*.category div:first-child,*/
 .job_detail_input_wrapper input,
 .job_detail_input_wrapper textarea {
   font-family: 'Roboto', sans-serif;
@@ -150,11 +151,25 @@
   font-size: 16px;
   outline: none;
   border: none;
-  padding: 5px 10px;
+  padding: 7.5px 10px;
   border: 1px solid rgba(0,0,0,0.25);
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
   resize: none;
+}
+.category {
+  display: inline-block;
+  box-sizing: border-box;
+  width: calc(100% - 120px);
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  border-radius: 5px;
+  border: 1px solid rgba(0,0,0,0.25);
+  vertical-align: bottom;
+}
+.category * {
+  color: #000 !important;
+  border: none !important;
+  outline: none;
 }
 
 .job_detail_input_wrapper input.error {
